--- a/templates/blog/post-comments.html
+++ b/templates/blog/post-comments.html
@@ -1,5 +1,4 @@
-{% load blog_extras crispy_forms_tags %}
-{%  crispy comment_form %}
+<!-- {% load blog_extras crispy_forms_tags %}
 
 <h4>Comments</h4>
 {% for comment in post.comments.all %}
@@ -33,4 +32,6 @@
         </form>
     {% endcol %}
 {% endrow %}
-{% endif %}
+{% endif %} -->
+
+{%  crispy comment_form %}
